# Globe

./: .gitignore  LICENSE.txt  README.md  generate_countrynames_by_id.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/news-api-go/: .env  fly.toml  go.mod  go.sum  main.go
apps/orbitalone-frontend/: .gitignore  index.html  package-lock.json  package.json
apps/tile-proxy-rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
apps/tile-proxy-rust/scripts/: prefill_tiles.sh
apps/tile-proxy-rust/src/: main.rs
backend/: Dockerfile  fly.toml  go.mod  go.sum  main.go
backend/data/: feeds.db  feeds.json  isoToDeepLLang.go
backend/feeds/: countryToFeeds.json  db.go  feeds.go  feeds_sqlite.go
backend/handlers/: admin_deepl_usage.go  admin_export_feeds.go  admin_feeds.go  admin_import_feeds.go  admin_test_feed.go  news.go
backend/localization/: translate.go
backend/middleware/: admin_auth.go  cors.go
backend/routes/: routes.go
backend/utils/: isoToDeepLLang.go  rss.go
data/: country_centroids.js
frontend/: README.md  index.html  index.orbitalone.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.data.json  tsconfig.json  vite.config.ts
frontend/docs/: architecture.md
frontend/src/: main.ts  style.css  (+1 more)
public/: country_id_map_8k_rgb.png.aux.xml  country_names_by_id.json  links.txt
src/: countryBorders.js  countryHover.js  countryHover.ts  countryLabel3D.js  countryLabel3D.ts  earthShaders.js  earthShaders.ts  main.js  main.ts  materials.js  materials.ts  style.css
(+290 files in other folders)
