[package]
name = "tile-proxy-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
hyper = { version = "1.6", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["server", "tokio"] }
reqwest = { version = "0.12.15", features = ["gzip", "stream"] }
futures-util = "0.3"
once_cell = "1.21"
anyhow = "1.0"
http-body-util = "0.1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
moka = { version = "0.12", features = ["future"] }
tokio-stream = "0.1"
